--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -3,17 +3,17 @@
 This chapter describes the considerations taken in picking an algorithm, as well as what is already implemented at Infomedia.
 
 \section{Algorithms in General}
-Before any sort of work can be done, one must consider various algorithm to work with. There are several text matching algorithms available for free on the Internet, and if one has the money for it, there are companies that can develop a specialized algorithm for you. As I do not have a lot of money (and paying for someone else, to do an algorithm for me, kind of defeats the purpose of this whole thesis) I have gone with the first option and found a free basic algorithm on the Internet, as well as contemplated to create my own algorithm from scratch.
+Before any sort of work can be done, one must consider various algorithms to work with. There are several text matching algorithms available for free on the Internet, and if one has the money for it, there are companies that can develop a specialized algorithm for you. As I do not have a lot of money (and paying for someone else, to make an algorithm for me, kind of defeats the purpose of this whole thesis) I have gone with the first option and found a free basic algorithm on the Internet, as well as contemplated to create my own algorithm from scratch.
 
 \subsection{Requirements Analysis}
 The algorithms should be able to live up to the following demands:
 
 \begin{itemize}
 	\item The algorithm should be able to work with text.
-	\item Performance is of secondary importance, but should have good accuracy (performance < accuracy).
+	\item Performance (run time) is of secondary importance, but should have good accuracy (performance < accuracy).
 	\item The algorithm shall be able to return a score based on how identical two articles are.
-	\item The algorithm should be focus on doing one thing only (not try to do several forms of text comparisons).
-	\item The algorithm shall be available in an open source, or free to use, licence.
+	\item The algorithm should be focused on doing one thing only (not try to do several forms of text comparisons).
+	\item The algorithm shall be available in an open source version, or free to use licence.
 \end{itemize}
 
 \section{Initial Considerations}
