--- a/Preface.tex
+++ b/Preface.tex
@@ -10,7 +10,7 @@ The project is equal to 20 ECTS points.
 
 The thesis deals with the issue of finding articles that are duplicates in a large corpus of articles. This is done using various algorithms and is implemented in C\#.
 
-The thesis consists of ...
+The thesis consists of this rapport together with a number of files included as a zip file (electronic version).
 %==================================================================================================
 % SIGNATURE AREA
 %==================================================================================================
