--- a/SummaryDK.tex
+++ b/SummaryDK.tex
@@ -5,6 +5,8 @@ Målet for denne afhandling er at dokumentere mit arbejde med at finde artikel d
 
 Jeg vil undersøge forskellige tekstsammenlignings algoritmer, og undersøge muligheden for at lave min egen algoritme, eller modificere en eksisterende algoritme til at bedre udføre det arbejde jeg laver i denne opgave.
 
+Jeg vil lave en analyse af behovet og kravene og så vil jeg dokumentere implementationen.
+
 Til sidst vil jeg gennemgå det arbejde jeg har lavet, hvilke problemer jeg løb ind i og hvad fremtiden for projektet vil være.
 
 \end{otherlanguage}
