--- a/SummaryUK.tex
+++ b/SummaryUK.tex
@@ -1,7 +1,9 @@
 \chapter{Summary (English)}
 
-The goal of this thesis is create is to document my work with implementing a working prototype of using algorithms to find article duplicates in a large corpus of articles. I will describe how the article inflow is currently working and how Infomedia plans on implementing my work in this inflow.
+The goal of this thesis is to document my work with implementing a working prototype of using algorithms to find article duplicates in a large corpus of articles. I will describe how the article inflow is currently working and how Infomedia plans on implementing my work in this inflow.
 
-I will look at various algorithms for text comparison, and look into the possibility of creating my own or tweak an existing algorithm to better suit the needs for this thesis.
+I will look at various algorithms for text comparison, and look into the possibility of creating my own algorithm or tweak an existing algorithm to better suit the needs for this job.
 
-Finally I will create a summary of the work done, problems I have come upon and what the future of the project will be.
+I will do an analysis of the task and what kind of implementation I have done.
+
+Finally I will write a summary of the work done, problems I have come across and what the future of the project will be.
