--- a/Acknowledgements.tex
+++ b/Acknowledgements.tex
@@ -1,5 +1,5 @@
 \chapter{Acknowledgements}
 
-I would like to thank my supervisors from DTU, Inge Li Gørtz and Philip Bille, for the help they provided to my project. Also I would like to thank my company Infomedia, for letting me do my project with them, in particular my project leader Klaus Wenzel Jørgensen and Rene Madsen.
+I would like to thank my supervisors from DTU, Inge Li Gørtz and Philip Bille, for the help they provided to my project. Also I would like to thank my company Infomedia, for letting me do my project for them, in particular my project leader Klaus Wenzel Jørgensen and Rene Madsen.
 
 
